# Cask

./: .gitignore  .gitmodules  CMakeLists.txt  Cask.h  CaskContainer.h  EntryPoint.h  LICENSE  README.md  main.cpp
Engine/Core/: CMakeLists.txt
Engine/Core/include/: Application.h  GameLayer.h
Engine/Core/src/: Application.cpp
Engine/Platform/: CMakeLists.txt
Engine/Platform/include/: Window.h
Engine/Platform/src/SDL/: SDLWindow.cpp
